# flatslab-cli

./: Cargo.toml  README.md
src/: main.rs  tx_utils.rs  utils.rs
src/slabcsv/: b58pk.rs  mod.rs  slab_csv_nanos.rs
src/sscu/: mod.rs  signer.rs  solana_cfg.rs  tx_send_mode.rs
src/subcmd/: init.rs  mod.rs  set_admin.rs  sync_prices.rs  view_admin.rs  view_prices.rs
test-fixtures/: init.csv  slab_1.csv
