[package]
name = "flatslab-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "^1", default-features = false }
clap = { version = "^4", features = ["derive"] }
data-encoding = "^2"
tokio = { version = "^1", default-features = false, features = ["rt-multi-thread"] }

# program deps
inf1-pp-flatslab-core = { git = "https://github.com/igneous-labs/inf-1.5.git", branch = "master" }

# solana deps
solana-clap-utils = "^2"
solana-cli-config = "^2"
solana-compute-budget-interface = "^2"
solana-commitment-config = "^2"
solana-hash = "^2"
solana-instruction = "^2"
solana-message = "^2"
solana-pubkey = "^2"
solana-rpc-client = "^2"
solana-rpc-client-types = "^2"
solana-signature = "^2"
solana-signer = "^2"
solana-transaction = "^2"
solana-transaction-status-client-types = "^2"
